Rewrote Trajectory Command based on WPILIB